# cpp-mod-player

./: .gitignore  CMakeLists.txt
include/: config.hpp.in
include/mods/: ModuleReader.hpp  SoundPlayer.hpp  StandardFrequency.hpp
include/mods/converters/: CastConverter.hpp  ChannelCopyConverter.hpp  Converter.hpp  DivideConverter.hpp  DownscaleConverter.hpp  FillLSBConverter.hpp  FromDoubleConverter.hpp  MultiplexerConverter.hpp  OpenCLConverterTypes.hpp  OpenCLResampleConverter.hpp  ResampleConverter.hpp  ResampleParameters.hpp  ResamplePositiveIntegerFactor.hpp  SoftwareResampleConverter.hpp  ToDoubleConverter.hpp  UnsignedToSignedConverter.hpp  UpscaleConverter.hpp
include/mods/converters/impl/: ChannelCopyConverterImpl.hpp  OpenCLResampleConverterImpl.hpp  ResampleConverterImpl.hpp
include/mods/mod/: Arpeggio.hpp  ChannelId.hpp  ChannelState.hpp  DelaySample.hpp  Effect.hpp  EffectType.hpp  Instrument.hpp  ModChannelConverter.hpp  ModReader.hpp  NoEffect.hpp  Note.hpp  PatternListReader.hpp  PatternReader.hpp  Retrigger.hpp  SlideDown.hpp  SlideToNote.hpp  SlideToNoteAndVolumeSlide.hpp  SlideUp.hpp  Vibrato.hpp  VibratoAndVolumeSlide.hpp  VolumeSlide.hpp
include/mods/utils/: AmigaRLESample.hpp  Band.hpp  BitReader.hpp  Buffer.hpp  BufferBackend.hpp  ChebyshevPolynom.hpp  ConstFraction.hpp  DynamicRingBuffer.hpp  FileUtils.hpp  FirFilterDesigner.hpp  MathConstants.hpp  OpenCLManager.hpp  PackedArray.hpp  RBuffer.hpp  RBufferBackend.hpp  RBufferBase.hpp  RWBuffer.hpp  RWBufferBackend.hpp  TransformedCollection.hpp  arithmeticShifter.hpp  at.hpp  bessel.hpp  endianness.hpp  gcd.hpp  integerFactorization.hpp  nativeEndian.hpp.in  optional.hpp  types.hpp
include/mods/utils/impl/: FileUtils.hpp
include/mods/utils/impl/unix/: FileUtils.h
include/mods/wav/: ADPCMDecoderConverter.hpp  ALawConverter.hpp  BytesSkipConverter.hpp  ChannelCopyWavConverter.hpp  DVIADPCMDecoderConverter.hpp  DemuxConverter.hpp  DivideConverter.hpp  DownscaleWavConverter.hpp  DummyWavConverter.hpp  FillLSBConverter.hpp  Format.hpp  FromDoubleConverter.hpp  GSMBitReader.hpp  GSMDecoderConverter.hpp  GSMInt16.hpp  GenericResampleConverter.hpp  MuLawConverter.hpp  MultiChannelMixer.hpp  MultiplexerWavConverter.hpp  OKIADPCMDecoderConverter.hpp  OpenCLConverterTypes.hpp  OpenCLResampleConverter.hpp  ReaderWavConverter.hpp  ResampleConverter.hpp  ResampleParameters.hpp  ResamplePositiveIntegerFactor.hpp  ShiftLeftConverter.hpp  SoftwareResampleConverter.hpp  StatCollector.hpp  ToDoubleConverter.hpp  TruspeechDecoderConverter.hpp  UnpackToTypeConverter.hpp  UnsignedToSignedWavConverter.hpp  UpscaleWavConverter.hpp  WavConverter.hpp  WavConverterFactory.hpp  WavReader.hpp  WavTypes.hpp
include/mods/wav/impl/: ADPCMDecoderConverterImpl.hpp  ChannelCopyWavConverterImpl.hpp  DVIADPCMDecoderConverterImpl.hpp  DemuxConverterImpl.hpp  MultiChannelMixerImpl.hpp  ResampleConverterImpl.hpp
src/: Buffer.cpp  Buffer.hpp  FileUtils.cpp  FileUtils.hpp  ModReader.cpp  ModReader.hpp  ModuleReader.cpp  ModuleReader.hpp  RBuffer.hpp  SoundPlayer.cpp  SoundPlayer.hpp  WavConverter.cpp  WavConverter.hpp  WavReader.cpp  WavReader.hpp  endianness.hpp  main.cpp  nativeEndian.hpp.in  optional.hpp  types.hpp
src/impl/: FileUtils.hpp
src/impl/unix/: FileUtils.c  FileUtils.cpp  FileUtils.h  modopen.c  modopen.h
src/mods/: ModuleReader.cpp  SoundPlayer.cpp
src/mods/converters/: CastConverter.cpp  ChannelCopyConverter.cpp  DivideConverter.cpp  DownscaleConverter.cpp  FillLSBConverter.cpp  FromDoubleConverter.cpp  MultiplexerConverter.cpp  OpenCLResampleConverter.cpp  ResampleConverter.cpp  ResampleParameters.cpp  ResamplePositiveIntegerFactor.cpp  SoftwareResampleConverter.cpp  ToDoubleConverter.cpp  UnsignedToSignedConverter.cpp  UpscaleConverter.cpp
src/mods/mod/: Arpeggio.cpp  ChannelState.cpp  DelaySample.cpp  Instrument.cpp  ModChannelConverter.cpp  ModReader.cpp  NoEffect.cpp  Note.cpp  PatternListReader.cpp  PatternReader.cpp  Retrigger.cpp  SlideDown.cpp  SlideToNote.cpp  SlideToNoteAndVolumeSlide.cpp  SlideUp.cpp  Vibrato.cpp  VibratoAndVolumeSlide.cpp  VolumeSlide.cpp
src/mods/tools/: FilterGeneratorTool.cpp
src/mods/utils/: AmigaRLESample.cpp  Band.cpp  BitReader.cpp  Buffer.cpp  BufferBackend.cpp  FileUtils.cpp  FilterGeneratorTool.cpp  FirFilterDesigner.cpp  OpenCLManager.cpp  RBufferBackend.cpp  RWBufferBackend.cpp  bessel.cpp  integerFactorization.cpp
src/mods/utils/impl/: FileUtils.hpp
src/mods/utils/impl/unix/: FileUtils.c  FileUtils.cpp
src/mods/wav/: ADPCMDecoderConverter.cpp  ALawConverter.cpp  BytesSkipConverter.cpp  ChannelCopyWavConverter.cpp  DVIADPCMDecoderConverter.cpp  DemuxConverter.cpp  DivideConverter.cpp  DownscaleWavConverter.cpp  DummyWavConverter.cpp  FillLSBConverter.cpp  Format.cpp  FromDoubleConverter.cpp  GSMBitReader.cpp  GSMDecoderConverter.cpp  GenericResampleConverter.cpp  MuLawConverter.cpp  MultiChannelMixer.cpp  MultiplexerWavConverter.cpp  OKIADPCMDecoderConverter.cpp  OpenCLResampleConverter.cpp  ReaderWavConverter.cpp  ResampleConverter.cpp  ResampleParameters.cpp  ResamplePositiveIntegerFactor.cpp  ShiftLeftConverter.cpp  SoftwareResampleConverter.cpp  StatCollector.cpp  ToDoubleConverter.cpp  TruspeechDecoderConverter.cpp  UnpackToTypeConverter.cpp  UnsignedToSignedWavConverter.cpp  UpscaleWavConverter.cpp  WavConverter.cpp  WavConverterFactory.cpp  WavReader.cpp  WavTypes.cpp
